--- a/index.html
+++ b/index.html
@@ -123,45 +123,208 @@
           <div class="col-lg-8">
             <div class="row gx-5 row-cols-1 row-cols-md-2">
               <div class="col mb-5">
-                <div><h4>ICON<h4></div>
-                 <h5>Featured title</h5>
-                 <p>Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                <div><h4>ICON</h4></div>
+                <h5>Featured title</h5>
+                <p>
+                  Paragraph of text beneath the heading to explain the heading.
+                  Here is just a bit more text.
+                </p>
               </div>
               <div class="col mb-5">
-                <div><h4>ICON<h4></div>
-                 <h5>Featured title</h5>
-                 <p>Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                <div><h4>ICON</h4></div>
+                <h5>Featured title</h5>
+                <p>
+                  Paragraph of text beneath the heading to explain the heading.
+                  Here is just a bit more text.
+                </p>
               </div>
               <div class="col mb-5">
-                <div><h4>ICON<h4></div>
-                 <h5>Featured title</h5>
-                 <p>Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                <div><h4>ICON</h4></div>
+                <h5>Featured title</h5>
+                <p>
+                  Paragraph of text beneath the heading to explain the heading.
+                  Here is just a bit more text.
+                </p>
               </div>
               <div class="col">
-                <div><h4>ICON<h4></div>
-                 <h5>Featured title</h5>
-                 <p>Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                <div><h4>ICON</h4></div>
+                <h5>Featured title</h5>
+                <p>
+                  Paragraph of text beneath the heading to explain the heading.
+                  Here is just a bit more text.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="py-5 bg-light">
+    <div class="py-5 bg-light justify-content-center">
       <div class="container my-5 px-5">
         <div class="row gx-5 justify-content-center">
           <div class="col-lg-10 col-xl-7 font3 mb-4">
-            <p><i>"Working with Start Bootstrap templates has saved me tons of development time when building new projects! Starting with a Bootstrap template just makes things easier!"</i></p>
+            <p>
+              <i
+                >"Working with Start Bootstrap templates has saved me tons of
+                development time when building new projects! Starting with a
+                Bootstrap template just makes things easier!"</i
+              >
+            </p>
             <div class="d-flex align-items-center justify-content-center mt-4">
-              <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/000/fff.png&text=SD" alt="Dummy Hi">
-              <div style="font-size: 18px; font-weight: 600;">
+              <img
+                class="rounded-circle me-3"
+                src="https://dummyimage.com/40x40/000/fff.png&text=SD"
+                alt="Dummy SD"
+              />
+              <div style="font-size: 18px; font-weight: 600">
                 Samed Deniz / CEO
               </div>
             </div>
           </div>
-        </div>  
+        </div>
       </div>
     </div>
+    <section class="py-5">
+      <div class="container px-5 my-5">
+        <div class="row gx-5 justify-content-center">
+          <div class="col-lg-8">
+            <div class="text-center">
+              <h4 class="fw-bolder mb-4">From our Blog</h4>
+              <p class="mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                sapiente non ratione illum error quaerat provident tempora
+                necessitatibus, voluptatibus alias quibusdam reprehenderit natus
+                distinctio nemo, quisquam molestias. Ducimus, modi similique!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row gx-5 justify-content-center">
+          <div class="col-lg-4 col-xl-4 mb-4 h-100">
+            <div class="card" style="width: 18rem">
+              <img src="/placeholder.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <div class="badge badges">News</div>
+                <h5 class="card-title">Blog Post title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-start mt-4"
+                >
+                  <img
+                    class="rounded-circle me-3"
+                    src="https://dummyimage.com/40x40/000/fff.png&text=SD"
+                    alt="Dummy SD"
+                  />
+                  <div style="font-size: 16px; font-weight: 400">
+                    Samed Deniz / CEO
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-xl-4 mb-4 h-100">
+            <div class="card" style="width: 18rem">
+              <img src="/placeholder.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <div class="badge badges">News</div>
+                <h5 class="card-title">Second Post title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-start mt-4"
+                >
+                  <img
+                    class="rounded-circle me-3"
+                    src="https://dummyimage.com/40x40/000/fff.png&text=SD"
+                    alt="Dummy SD"
+                  />
+                  <div style="font-size: 16px; font-weight: 400">
+                    Şule Arslan / COO
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-xl-4 mb-4 h-100">
+            <div class="card" style="width: 18rem">
+              <img src="/placeholder.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <div class="badge badges">News</div>
+                <h5 class="card-title">Third Post title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-start mt-4"
+                >
+                  <img
+                    class="rounded-circle me-3"
+                    src="https://dummyimage.com/40x40/000/fff.png&text=SD"
+                    alt="Dummy SD"
+                  />
+                  <div style="font-size: 16px; font-weight: 400">
+                    Salça Sütlaç / CFO
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <section class="bg-dark bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+          <div
+            class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
+          >
+            <div class="mb-4 mb-xl-0">
+              <div class="fs-3 fw-bold text-white">
+                New products, delivered to you.
+              </div>
+              <div class="text-white-50">
+                Sign up for our newsletter for the latest updates.
+              </div>
+            </div>
+            <div class="ms-xl-4">
+              <div class="input-group mb-2">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Email address..."
+                  aria-label="Email address..."
+                  aria-describedby="button-newsletter"
+                />
+                <button
+                  class="btn btn-outline-light"
+                  id="button-newsletter"
+                  type="button"
+                >
+                  Sign up
+                </button>
+              </div>
+              <div class="small text-white-50">
+                We care about privacy, and will never share your data.
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </section>
+    <footer>
+      <div class="copyright-footer d-flex justify-content-between">
+        <div>Copyright © Samed Deniz 2024</div>
+        <div >
+          <a class="footer-links" href="#">Privacy</a>
+          <span>*</span>
+          <a class="footer-links" href="#">Terms</a>
+          <span>*</span>
+          <a class="footer-links" href="#">Contact</a>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
